# agentbench

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: livecodebench-sample.yml  sample-benchmark.yml  swe-bench-lite.yml  terminal-bench-sample.yml
data/: livecodebench-sample.json  swe-bench-sample.json  terminal-bench-sample.json
docs/plans/: 2026-06-01-agentbench-v0.1.0.md
src/: cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  metrics.rs  report.rs  runner.rs
src/benchmark/: huggingface.rs  livecodebench.rs  mod.rs  swe_bench.rs  terminal_bench.rs
src/harness/: claude_code.rs  codex.rs  generic.rs  hermes.rs  mock.rs  mod.rs  opencode.rs  openshark.rs
src/tui/: app.rs  mod.rs  theme.rs  ui.rs
src/web/: mod.rs  routes.rs  state.rs
tests/: benchmark_test.rs  config_test.rs  harness_test.rs  runner_test.rs
