[package]
name = "agentbench"
version = "0.3.2"
edition = "2021"
authors = ["synth <synthalorian>"]
description = "Open-source benchmark runner for AI coding agents"
license = "MIT"
repository = "https://github.com/synthalorian/agentbench"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.29"
crossterm = "0.28"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
handlebars = "6"
walkdir = "2"
tempfile = "3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
